# lox-cpp-impl

./: .gitignore  CMakeLists.txt  README.md  lox.cpp
Checker/: Checker.cpp  Checker.h
Environment/: Environment.h
Error/: Error  Error.cpp  Error.h  foo
Interpreter/: Callables.cpp  Callables.h  Interpreter.cpp  Interpreter.h
Parser/: Expr.h  Parser.cpp  Parser.h  Stmt.h
Scanner/: Scanner.cpp  Scanner.h
Types/: Token.cpp  Token.h
tools/: GenerateAst.cpp  colors.h  printer_ast.cpp  printer_ast.h  printer_identifiers.cpp  printer_identifiers.h
